--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <nav class="navbar">
         <ul>
-            <a href="home.html"><i class='bx bx-home'></i> Home</a>
+            <a href="index.html"><i class='bx bx-home'></i> Home</a>
             <a href="about.html"><i class='bx bxs-user'></i> About Us</a>
             <a href="menu.html"><i class='bx bxl-product-hunt'></i> Products</a>
             <a href="review.html"><i class='bx bx-comment'></i> Review</a>
